<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sfitc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ayusufsirin@gmail.com">Ahmet Yusuf Şirin</maintainer>
  <license>TODO: License declaration</license>

    <!-- Runtime deps -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- message_filters + sensor_msgs_py are ROS2 packages -->
  <exec_depend>message_filters</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>

  <!-- NumPy is typically available, but include it for completeness -->
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
